# c-lang-pointer-tutorial

./: .gitignore  CMakeLists.txt  README.md
data/: sample_nmea.txt
docs/: 00-cmake-guide.md  01-pointer-basics.md  02-array-string.md  03-struct-pointer.md  04-function-pointer.md  05-double-pointer.md  06-const-volatile.md  07-pitfalls.md  08-dynamic-memory.md  09-linked-list.md
docs/exercises-solutions/: README.md  solutions-01.md  solutions-02.md  solutions-03.md  solutions-04.md  solutions-05.md  solutions-06.md  solutions-07.md  solutions-08.md  solutions-09.md
examples/: CMakeLists.txt
examples/01_basics/: main.c
examples/02_array_string/: main.c
examples/03_struct_pointer/: main.c
examples/04_function_pointer/: main.c
examples/05_double_pointer/: main.c
examples/06_const_volatile/: main.c
examples/08_dynamic_memory/: main.c
examples/09_linked_list/: main.c
include/gps/: gps_types.h  nmea_parser.h  ring_buffer.h  track_log.h
include/hal/: uart_mock.h
scripts/: checksum.c
src/app/: main.c
src/gps/: nmea_parser.c  ring_buffer.c  track_log.c
src/hal/: uart_mock.c
stm32/: README.md  main_stm32.c
tests/: CMakeLists.txt  test_helpers.h  test_nmea_parser.c  test_pointer_basics.c  test_ring_buffer.c  test_track_log.c
